packages/build/tests/error/fixtures/monitor_fail_plugin/plugin.js
export default {
  onPreBuild({
    utils: {
      build: { failPlugin },
    },
  }) {
    failPlugin('test')
  },
}
